# retry-model-request

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  proxy-server.ts  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  proxy.rs  stats.rs
src-tauri/src/config/: manager.rs  mod.rs  schema.rs
src-tauri/src/proxy/: handler.rs  mod.rs  server.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: Sidebar.vue
src/components/base/: Button.vue  Card.vue  Input.vue  Select.vue  Switch.vue  Tag.vue
src/router/: index.ts
src/scripts/: ConstantUtils.ts  LogUtils.ts
src/stores/: config.ts  proxy.ts  stats.ts
src/styles/: global.scss  mixins.scss  variables.scss
src/views/: Home.vue  Logs.vue
