[package]
name = "retry-model-request"
version = "1.0.0"
description = "AI Model Request Proxy with Auto-Retry"
authors = ["you"]
edition = "2021"

[lib]
name = "retry_model_request_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
url = "2"
tokio-stream = "0.1"
